--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
+    --botao-azul-efeito:#9abbe3;
 }
 
 body {
@@ -39,77 +40,121 @@ body {
     padding: 1em;
     color: var(--branco-principal);
     display: block;
-text-decoration: nome;
+    text-decoration: nome;
 }
 
-.botao_secundario{
-background-color: transparent;
-border: 2px solid var(--branco-principal);
+.botao_secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
 
 }
 
-.container__aviso{
+.container__aviso {
     font-size: 12px;
     color: var(--cinza-secundario);
 }
 
-.container__titulo{
+.container__titulo {
     font-size: 28px;
     font-weight: 700;
 }
 
-.container__imagem{
-    margin:1em 0 6em;
+.container__imagem {
+    margin: 1em 0 6em;
 }
 
-.container__caixa{
+.container__caixa {
     margin: 0 6em;
 }
 
-.secundario__imagem{
+.secundario__imagem {
     width: 80%;
 }
 
-.secundario{
+.secundario {
     align-items: center;
     margin: 0 10em;
 }
 
-.descricao__titulo{
-font-weight: 700;
-font-size: 48px;
-color:var(--branco-principal);
-margin-bottom: 0.1em;
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
 }
 
-.descricao__texto{
+.descricao__texto {
     color: var(--cinza-secundario);
 
 }
-.secundario__botao{
+
+.secundario__botao {
     display: inline-block;
     margin-top: 1em;
 }
 
-.container__descricao{
+.container__descricao {
     padding: 2em;
 }
-.dispositivos___lista{
+
+.dispositivos___lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
     margin: 5em 0;
 }
 
-.dispositivos{
-text-align: center;
+.dispositivos {
+    text-align: center;
 }
-.dispositivos___titulo{
+
+.dispositivos___titulo {
     font-size: 48px;
     color: var(--branco-principal);
 }
 
-.lista__item{
+.lista__item {
     font-size: 32px;
     color: var(--branco-principal);
+}
+
+.rodape__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista__link a{
+text-decoration: none;
+color: var(--branco-principal);
+margin: 1em;
+}
+
+
+.rodape__texto{
+    margin: 1em;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+
+.rodape {
+text-align: center;
+margin: 5em 3em;
+}
+
+
+.lista__link a:hover{
+    color: rgb(171, 197, 236)
+}
+
+
+.lista__link a:active{
+    color: rgb(153, 238, 238);
+}
+
+.container__botao:hover{
+    background-attachment: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo)
 }
